2014-07-31  Julien Bect  <julien.bect@supelec.fr>

	Modify the behaviour of vertcat/horzcat for stk_dataframe objects.

	* arrays/@stk_dataframe/horzcat.m: Modified. The result is always
	an stk_dataframe object, and has row names iff either one of the
	two arguments doesn't have row names, or the row names of both
	arguments agree.
	* arrays/@stk_dataframe/vertcat.m: Similar changes.

	Modify the behaviour of bsxfun for stk_dataframe objects.

	* arrays/@stk_dataframe/bsxfun.m: Modified. The result is always
	an stk_dataframe object, and has column names iff either one of
	the two arguments doesn't have columns names or the columns names
	of both arguments agree.
	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Modified unit
	test.
	* arrays/@stk_dataframe/abs.m: Overload abs for stk_dataframe
	object. This allows to write abs (x) instead of abs (double (x))
	or abs (x.data).

2014-07-24  Julien Bect  <julien.bect@supelec.fr>

	Accept invRho = 0 in anisotropic covariance functions.

	* covfcs/stk_gausscov_aniso.m: Accept invRho = 0.
	* covfcs/stk_materncov32_aniso.m: Idem.
	* covfcs/stk_materncov52_aniso.m: Idem.
	* covfcs/stk_materncov_aniso.m: Idem.

	stk_sprintf_colvect_scientific.m: Fix a bug.

	* misc/text/stk_sprintf_colvect_scientific.m: Fix a bu related to
	rounding numbers such as 9.99e02 (which were displayed as 10e+02
	instead of 1e+03).
	* arrays/@stk_dataframe/stk_sprintf.m: Set default width to 8.
	* misc/text/stk_sprintf_colvect.m: Idem.
	* misc/text/stk_sprintf_colvect_fixedpoint.m: Idem.

2014-07-23  Julien Bect  <julien.bect@supelec.fr>

	stk_param_estim.m: Warn about constant-response data.

	* paramestim/stk_param_estim.m: Warn about constant-response data.

2014-07-22  Julien Bect  <julien.bect@supelec.fr>

	stk_param_init.m: Warn about constant-response data.

	* paramestim/stk_param_init.m: Warn about constant-response data.

	stk_param_relik.m: Check symmetry of G = W' * K * W.
