@@ -2,7 +2,7 @@
 
 % Copyright Notice
 %
-%    Copyright (C) 2013 SUPELEC
+%    Copyright (C) 2013, 2014 SUPELEC
 %
 %    Author:  Julien Bect  <julien.bect@supelec.fr>
 
@@ -26,8 +26,8 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function c = reserved_field_names()
+function c = reserved_field_names ()
 
-c = {'rownames', 'colnames'};
+c = {'data', 'info', 'rownames', 'colnames'};
 
 end % function reserved_field_names
